tests/success/classes/Delay.vix
class Delay where

instance Delay where

ifThenElse : forall a. bool -> (Delay => a) -> (Delay => a) -> a
ifThenElse True t _ = t
ifThenElse False _ f = f

main : int
main = ifThenElse True (printInt 1) (printInt 0)
